# flygplats

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.test-runner.txt
backend/: requirements-core.txt  requirements.runtime.txt  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  logging_setup.py  main.py  seed_init_data.py
backend/docs/: tournaments_and_statistics.md
backend/init_data/: golf_clubs.json  golf_courses_25.json  golf_players.json
backend/scripts/: seed.py
backend/tests/: README.md  conftest.py  test_01_remote_session_factory.py  test_02_init_data_seed.py  test_03_golf_clubs.py  test_04_api.py  test_05_dev_logs.py  test_06_match_statistics_suite.py  test_07_load_scenario.py  test_08_tournaments.py  test_api.py  test_dev_logs.py  test_golf_clubs.py  test_load_scenario.py
frontend/: requirements-core.txt  requirements.runtime.txt  requirements.txt
frontend/golf_desktop/: __init__.py  __main__.py  log_setup.py
frontend/tests/: README.md  conftest.py  test_01_canvas.py  test_02_xdotool_main_window.py  test_canvas.py
infra/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.test-runner  README.md  docker-compose.linux-x11.yml  docker-compose.mac-x11-socket.yml  docker-compose.yml  docker-entrypoint-backend.sh
infra/gui-test-vm/: .gitignore  Makefile  README-PROXMOX.md  (+7 more)
scripts/: check-docker-frontend-display.sh  docker-up.sh  pre-commit-tests.sh  setup-windows.ps1  setup.sh  verify-x11-docker-mac.sh
tests/: README.md
(+87 files in other folders)
